[tool.poetry]
name = "fake-news-detector"
version = "0.1.0"
description = "Project to detect fake news."
authors = ["Oliver <antonioj.oliver.garcia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
